# Catalog_django

./: .gitignore  README.md  catalog_fixture.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_posts_is_publishing.py  0003_alter_posts_count_views.py  0004_alter_posts_is_publishing.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  posts_list.html
catalog/: admin.py  context_processors.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_publish.py  0002_alter_product_product_image.py  0003_alter_product_product_image.py  0003_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
media/blog/images/: 1_21KwrgZ.avif  IMG2765.avif
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html  logout.html
users/templates/users/: user_form.html
